--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,22 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+/* Navigation Css */
+nav {
+    display: flex;
+    justify-content: end;
+    background-color: #964B00;
+    color: white;
+    text-transform: capitalize;
+    height: 92px;
+    width: 100%;
+}
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background-color: aqua; */
+    width: 20%;
+    margin-right: 50px;
+}
