--- a/src/app.css
+++ b/src/app.css
@@ -2,10 +2,15 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+body {
+    background-color: #FDD29B;
+}
 /* Navigation Css */
 nav {
+    position: sticky;
     display: flex;
-    justify-content: end;
+    justify-content: space-around;
+    gap: 670px;
     background-color: #964B00;
     color: white;
     text-transform: capitalize;
@@ -18,5 +23,68 @@ nav ul {
     align-items: center;
     /* background-color: aqua; */
     width: 20%;
-    margin-right: 50px;
 }
+.logo {
+    width: 96px;
+    height: 78px;
+    border-radius: 84.5px;
+    top: 5px;
+}
+/*****************************************/
+
+/* Menu List Card "Home Page" */
+.menu {
+    margin-top: 25px;
+    background-color: rgba(151, 151, 151, 0.25);
+    width: 100%;
+    height: 348px;
+}
+.menu-list {
+    position: relative;
+    width: 100%;
+    height: 70%;
+    /* background-color: aqua; */
+
+    display: flex;
+    justify-content: space-around;
+    align-items: end;
+}
+.menu-card, img {
+    position: relative;
+    width: 286px;
+    height: 194px;
+    background-color: rgb(10, 12, 12);
+}
+.text {
+    position: relative;
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    padding: 0;
+    margin: 0;
+}
+
+.text p {
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+    padding-left: 100px;
+    padding-right: 100px;
+    border-bottom: solid 2px black;
+}
+
+.text button {
+    background-color: #BA7A3A;
+    width: 160px;
+    height: 64px;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+}
+/***********************************************/
